v5.2.0/llms/components/ix-application.md
# ix-application

> Root container that sets up the overall application shell and layout.

## Documentation

- https://ix.siemens.io//docs/components/application/guide.md

## Figma IDs

- None

## Related examples

Example source links are relative to this Markdown file.

- about-and-legal
  - angular:
    - `angular/about-and-legal.html`: [source](../../examples/angular-examples/src/preview-examples/about-and-legal.html)
    - `angular/about-and-legal.ts`: [source](../../examples/angular-examples/src/preview-examples/about-and-legal.ts)
  - angular-standalone:
    - `angular-standalone/about-and-legal.html`: [source](../../examples/angular-standalone-examples/src/preview-examples/about-and-legal.html)
    - `angular-standalone/about-and-legal.ts`: [source](../../examples/angular-standalone-examples/src/preview-examples/about-and-legal.ts)
  - html:
    - `html/about-and-legal.html`: [source](../../examples/html-examples/src/preview-examples/about-and-legal.html)
  - react:
    - `react/about-and-legal.tsx`: [source](../../examples/react-examples/src/preview-examples/about-and-legal.tsx)
  - vue:
    - `vue/about-and-legal.vue`: [source](../../examples/vue-examples/src/preview-examples/about-and-legal.vue)
- about-and-legal-legacy
  - angular:
    - `angular/about-and-legal-legacy.html`: [source](../../examples/angular-examples/src/preview-examples/about-and-legal-legacy.html)
    - `angular/about-and-legal-legacy.ts`: [source](../../examples/angular-examples/src/preview-examples/about-and-legal-legacy.ts)
  - angular-standalone:
    - `angular-standalone/about-and-legal-legacy.html`: [source](../../examples/angular-standalone-examples/src/preview-examples/about-and-legal-legacy.html)
    - `angular-standalone/about-and-legal-legacy.ts`: [source](../../examples/angular-standalone-examples/src/preview-examples/about-and-legal-legacy.ts)
  - html:
    - `html/about-and-legal-legacy.html`: [source](../../examples/html-examples/src/preview-examples/about-and-legal-legacy.html)
  - react:
    - `react/about-and-legal-legacy.tsx`: [source](../../examples/react-examples/src/preview-examples/about-and-legal-legacy.tsx)
  - vue:
    - `vue/about-and-legal-legacy.vue`: [source](../../examples/vue-examples/src/preview-examples/about-and-legal-legacy.vue)
- application
  - angular:
    - `angular/application.html`: [source](../../examples/angular-examples/src/preview-examples/application.html)
    - `angular/application.ts`: [source](../../examples/angular-examples/src/preview-examples/application.ts)
  - angular-standalone:
    - `angular-standalone/application.html`: [source](../../examples/angular-standalone-examples/src/preview-examples/application.html)
    - `angular-standalone/application.ts`: [source](../../examples/angular-standalone-examples/src/preview-examples/application.ts)
  - html:
    - `html/application.html`: [source](../../examples/html-examples/src/preview-examples/application.html)
  - react:
    - `react/application.tsx`: [source](../../examples/react-examples/src/preview-examples/application.tsx)
  - vue:
    - `vue/application.vue`: [source](../../examples/vue-examples/src/preview-examples/application.vue)
- application-advanced
  - angular:
    - `angular/application-advanced.html`: [source](../../examples/angular-examples/src/preview-examples/application-advanced.html)
    - `angular/application-advanced.ts`: [source](../../examples/angular-examples/src/preview-examples/application-advanced.ts)
  - angular-standalone:
    - `angular-standalone/application-advanced.html`: [source](../../examples/angular-standalone-examples/src/preview-examples/application-advanced.html)
    - `angular-standalone/application-advanced.ts`: [source](../../examples/angular-standalone-examples/src/preview-examples/application-advanced.ts)
  - html:
    - `html/application-advanced.html`: [source](../../examples/html-examples/src/preview-examples/application-advanced.html)
  - react:
    - `react/application-advanced.tsx`: [source](../../examples/react-examples/src/preview-examples/application-advanced.tsx)
  - vue:
    - `vue/application-advanced.vue`: [source](../../examples/vue-examples/src/preview-examples/application-advanced.vue)
- application-app-switch
  - angular:
    - `angular/application-app-switch.html`: [source](../../examples/angular-examples/src/preview-examples/application-app-switch.html)
    - `angular/application-app-switch.ts`: [source](../../examples/angular-examples/src/preview-examples/application-app-switch.ts)
  - angular-standalone:
    - `angular-standalone/application-app-switch.html`: [source](../../examples/angular-standalone-examples/src/preview-examples/application-app-switch.html)
    - `angular-standalone/application-app-switch.ts`: [source](../../examples/angular-standalone-examples/src/preview-examples/application-app-switch.ts)
  - html:
    - `html/application-app-switch.html`: [source](../../examples/html-examples/src/preview-examples/application-app-switch.html)
  - react:
    - `react/application-app-switch.tsx`: [source](../../examples/react-examples/src/preview-examples/application-app-switch.tsx)
  - vue:
    - `vue/application-app-switch.vue`: [source](../../examples/vue-examples/src/preview-examples/application-app-switch.vue)
- application-breakpoints
  - angular:
    - `angular/application-breakpoints.html`: [source](../../examples/angular-examples/src/preview-examples/application-breakpoints.html)
    - `angular/application-breakpoints.ts`: [source](../../examples/angular-examples/src/preview-examples/application-breakpoints.ts)
  - angular-standalone:
    - `angular-standalone/application-breakpoints.html`: [source](../../examples/angular-standalone-examples/src/preview-examples/application-breakpoints.html)
    - `angular-standalone/application-breakpoints.ts`: [source](../../examples/angular-standalone-examples/src/preview-examples/application-breakpoints.ts)
  - html:
    - `html/application-breakpoints.html`: [source](../../examples/html-examples/src/preview-examples/application-breakpoints.html)
  - react:
    - `react/application-breakpoints.tsx`: [source](../../examples/react-examples/src/preview-examples/application-breakpoints.tsx)
  - vue:
    - `vue/application-breakpoints.vue`: [source](../../examples/vue-examples/src/preview-examples/application-breakpoints.vue)
- menu-category
  - angular:
    - `angular/menu-category.html`: [source](../../examples/angular-examples/src/preview-examples/menu-category.html)
    - `angular/menu-category.ts`: [source](../../examples/angular-examples/src/preview-examples/menu-category.ts)
  - angular-standalone:
    - `angular-standalone/menu-category.html`: [source](../../examples/angular-standalone-examples/src/preview-examples/menu-category.html)
    - `angular-standalone/menu-category.ts`: [source](../../examples/angular-standalone-examples/src/preview-examples/menu-category.ts)
  - html:
    - `html/menu-category.html`: [source](../../examples/html-examples/src/preview-examples/menu-category.html)
  - react:
    - `react/menu-category.tsx`: [source](../../examples/react-examples/src/preview-examples/menu-category.tsx)
  - vue:
    - `vue/menu-category.vue`: [source](../../examples/vue-examples/src/preview-examples/menu-category.vue)
- popover-news
  - angular:
    - `angular/popover-news.html`: [source](../../examples/angular-examples/src/preview-examples/popover-news.html)
    - `angular/popover-news.ts`: [source](../../examples/angular-examples/src/preview-examples/popover-news.ts)
  - angular-standalone:
    - `angular-standalone/popover-news.html`: [source](../../examples/angular-standalone-examples/src/preview-examples/popover-news.html)
    - `angular-standalone/popover-news.ts`: [source](../../examples/angular-standalone-examples/src/preview-examples/popover-news.ts)
  - html:
    - `html/popover-news.html`: [source](../../examples/html-examples/src/preview-examples/popover-news.html)
  - react:
    - `react/popover-news.tsx`: [source](../../examples/react-examples/src/preview-examples/popover-news.tsx)
  - vue:
    - `vue/popover-news.vue`: [source](../../examples/vue-examples/src/preview-examples/popover-news.vue)
- settings
  - angular:
    - `angular/settings.html`: [source](../../examples/angular-examples/src/preview-examples/settings.html)
    - `angular/settings.ts`: [source](../../examples/angular-examples/src/preview-examples/settings.ts)
  - angular-standalone:
    - `angular-standalone/settings.html`: [source](../../examples/angular-standalone-examples/src/preview-examples/settings.html)
    - `angular-standalone/settings.ts`: [source](../../examples/angular-standalone-examples/src/preview-examples/settings.ts)
  - html:
    - `html/settings.html`: [source](../../examples/html-examples/src/preview-examples/settings.html)
  - react:
    - `react/settings.tsx`: [source](../../examples/react-examples/src/preview-examples/settings.tsx)
  - vue:
    - `vue/settings.vue`: [source](../../examples/vue-examples/src/preview-examples/settings.vue)
- settings-legacy
  - angular:
    - `angular/settings-legacy.html`: [source](../../examples/angular-examples/src/preview-examples/settings-legacy.html)
    - `angular/settings-legacy.ts`: [source](../../examples/angular-examples/src/preview-examples/settings-legacy.ts)
  - angular-standalone:
    - `angular-standalone/settings-legacy.html`: [source](../../examples/angular-standalone-examples/src/preview-examples/settings-legacy.html)
    - `angular-standalone/settings-legacy.ts`: [source](../../examples/angular-standalone-examples/src/preview-examples/settings-legacy.ts)
  - html:
    - `html/settings-legacy.html`: [source](../../examples/html-examples/src/preview-examples/settings-legacy.html)
  - react:
    - `react/settings-legacy.tsx`: [source](../../examples/react-examples/src/preview-examples/settings-legacy.tsx)
  - vue:
    - `vue/settings-legacy.vue`: [source](../../examples/vue-examples/src/preview-examples/settings-legacy.vue)

## Related blocks

- unavailable (not present in registry JSON)

## Properties

- `appSwitchConfig`; type: `undefined | { currentAppId: string; apps: { id: string; name: string; description: string; url: string; target: AppSwitchConfigurationTarget; iconSrc: string; }[]; i18nAppSwitch?: string | undefined; i18nLoadingApps?: string | undefined; }` - Define application switch configuration
- `breakpoints`; type: `("sm" | "md" | "lg")[]`; default: `['sm', 'md', 'lg']` - Supported layouts
- `colorSchema`; attr: `color-schema`; type: `"dark" | "light" | "system" | undefined`; default: `'system'` - Color schema of the theme
- `forceBreakpoint`; attr: `force-breakpoint`; type: `"lg" | "md" | "sm" | undefined` - Change the responsive layout of the menu structure
- `theme`; attr: `theme`; type: `string | undefined` - Application theme

## Events

- None

## Slots

- `` - Main application content.
- `application-header` - Application header, typically an `ix-application-header`.
- `application-sidebar` - Application sidebar content.
- `bottom` - Content displayed at the bottom of the application layout.
- `menu` - Application menu, typically an `ix-menu`.
